fix message list text alignment

--- a/src/components/message-list/styles.module.scss
+++ b/src/components/message-list/styles.module.scss
@@ -1,10 +1,14 @@
 .container {
   width: 100%;
-  text-align: center;
 
-  .load-more-button {
-    align-self: center;
-    background-color: #4D38A2;
+  .load-more-button-container {
+    width: 100%;
+    text-align: center;
+
+    .load-more-button {
+      align-self: center;
+      background-color: #4D38A2;
+    }
   }
 
   .date {
